--- a/assets/custom.css
+++ b/assets/custom.css
@@ -22,6 +22,29 @@ h5,
   font-family: "TiemposHeadline-Regular", sans-serif;
 }
 
+.layout-row .rich-text__blocks {
+  max-width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.layout-row .rich-text__blocks .rich-text__text {
+  line-height: 2.1rem;
+}
+
+@media screen and (min-width: 1024px) {
+  .layout-row .rich-text__blocks {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    column-gap: 2rem;
+  }
+
+  .layout-row .rich-text__blocks .rich-text__text {
+    margin-top: 0;
+  }
+}
+
 .header__icon.link,
 .header__menu-item {
   font-family: "aeonikregular", sans-serif;
