--- a/sections/rich-text.liquid
+++ b/sections/rich-text.liquid
@@ -44,7 +44,7 @@
               </p>
             {%- when 'text' -%}
               <div
-                class="rich-text__text rte{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}"
+                class="rich-text__text rte {{ block.settings.text_width }}{% if settings.animations_reveal_on_scroll %} scroll-trigger animate--slide-in{% endif %}"
                 {{ block.shopify_attributes }}
                 {% if settings.animations_reveal_on_scroll %}
                   data-cascade
@@ -297,6 +297,26 @@
           "id": "text",
           "default": "t:sections.rich-text.blocks.text.settings.text.default",
           "label": "t:sections.rich-text.blocks.text.settings.text.label"
+        },
+        {
+          "type": "select",
+          "id": "text_width",
+          "options": [
+            {
+              "value": "compress-width",
+              "label": "Compress width"
+            },
+            {
+              "value": "semi-compress-width",
+              "label": "Semi compress width"
+            },
+            {
+              "value": "max-width",
+              "label": "Max width"
+            }
+          ],
+          "default": "max-width",
+          "label": "Text width"
         }
       ]
     },
