--- a/assets/base.css
+++ b/assets/base.css
@@ -264,7 +264,8 @@ h5,
   font-weight: var(--font-heading-weight);
   letter-spacing: calc(var(--font-heading-scale) * 0.06rem);
   color: rgb(var(--color-foreground));
-  line-height: calc(1 + 0.3 / max(1, var(--font-heading-scale)));
+  line-height: calc(1 / max(1, var(--font-heading-scale)));
+  /* line-height: calc(1 + 0.3 / max(1, var(--font-heading-scale))); */
   word-break: break-word;
 }
 
