Update section name

--- a/sections/image-text-simple.liquid
+++ b/sections/image-text-simple.liquid
@@ -110,7 +110,7 @@
 
 {% schema %}
 {
-  "name": "Image with Text",
+  "name": "Image with text",
   "class": "section",
   "disabled_on": {
     "groups": ["header", "footer"]
@@ -247,7 +247,7 @@
   ],
   "presets": [
     {
-      "name": "Image with Header Text"
+      "name": "Image with text"
     }
   ]
 }
