--- a/assets/custom.css
+++ b/assets/custom.css
@@ -137,6 +137,38 @@ h5,
   font-size: 1.2rem;
 } */
 
+.rich-text__graphics {
+  position: absolute;
+  height: auto;
+  object-fit: cover;
+}
+
+@media screen and (min-width: 750px) and (max-width: 990px) {
+  .rich-text__graphics {
+    display: none;
+  }
+}
+
+.rich-text__graphics--top-left {
+  top: 0;
+  left: 0;
+}
+
+.rich-text__graphics--top-right {
+  top: 0;
+  right: 0;
+}
+
+.rich-text__graphics--bottom-left {
+  bottom: 0;
+  left: 0;
+}
+
+.rich-text__graphics--bottom-right {
+  bottom: 0;
+  right: 0;
+}
+
 .marquee-wrapper {
   overflow: hidden;
 }
