blog featured image width and blogs image height settings

--- a/sections/main-blog.liquid
+++ b/sections/main-blog.liquid
@@ -97,6 +97,10 @@
         {
           "value": "large",
           "label": "t:sections.main-blog.settings.image_height.options__4.label"
+        },
+        {
+          "value": "extra-large",
+          "label": "Extra large"
         }
       ],
       "default": "medium",
