--- a/assets/section-blog-post.css
+++ b/assets/section-blog-post.css
@@ -9,7 +9,8 @@
 }
 
 .article-template__hero-container {
-  max-width: 130rem;
+  /* max-width: 130rem; */
+  max-width: 72.6rem;
   margin: 0 auto;
 }
 
